services/bff/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  namespace: bff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      name: bff
      labels:
        app: bff
    spec:
      # nodeSelector:
      #   node-pool: satellite
      containers:
        - name: bff
          image: th1alexandre/bff:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: 200m
              memory: "128Mi"
