services/bff/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bff-svc
  namespace: bff
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8085
  selector:
    app: bff
